--- a/Frontend/FindIt/components/home.css
+++ b/Frontend/FindIt/components/home.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap');
+
 p{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
@@ -29,6 +31,7 @@ p{
     font-size: 15px;
     border-radius: 0.5em;
     padding: 8px 10px; 
+    max-width: fit-content;
 }
 .image {
     border-radius: 0.5em;
@@ -36,7 +39,9 @@ p{
     margin-left:20%;   
     margin-top: 3%;
     height: auto;       
-    max-height: 300px;  
+    max-height: 325px; 
+    visibility: hidden;
+    
 }
 .section{
     margin-left:35%;   
@@ -45,4 +50,24 @@ p{
 .para{
     font-family: "Roboto", sans-serif;
         font-size: 35px;
+}
+.sub{
+    font-family: "Sora", sans-serif;
+    margin-left: 20%;
+    margin-right: 20%;
+    text-align: center;
+}
+.sub-reg{
+     
+    color: white;
+    background-color: rgb(0, 140, 255);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
+    border-radius: 0.5em;
+    padding: 10px 10px; 
+    max-width: fit-content;
+    margin-left: 47.5%;
+}
+.reg,.sub-reg:hover{
+    cursor: pointer;
 }
