--- a/Frontend/FindIt/components/main1.css
+++ b/Frontend/FindIt/components/main1.css
@@ -1,13 +1,10 @@
-/* ⛔ Do NOT change existing navbar styles */
 .reg:hover {
   cursor: pointer;
 }
-
 p {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 20px;
 }
-
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -38,7 +35,6 @@ p {
   text-align: center;
 }
 
-/* ✅ Upgraded form styles below */
 .main-heading {
   font-size: 34px;
   margin: 40px 0 30px 8%;
@@ -78,7 +74,7 @@ p {
   width: 360px;
   resize: none;
 }
-.sub{
+.submit-btn{
   font-size: medium;
   color: white;
   background-color:#0271e7;
@@ -88,7 +84,7 @@ p {
   margin-left: 45%;
   width: 10%;
 }
-.sub:hover{
+.submit-btn:hover{
   cursor: pointer;
   background-color: #0060c7;
 }
